S28-3616: amend ArrayList init. to List